updated main img url

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   
 
   <div class="sol-container">
-    <img class="mobile-img" src="./assets/bg-wide.jpg">
+    <img class="mobile-img" src="http://projects.sfchronicle.com/2017/embed-sol-landingpage/images/bg-wide.jpg">
     <h1 class="balance-text">Summer of Love</h1>
     <h2 class="balance-text">Be sure to wear flowers in your hair in San Francisco as the city celebrates the 50th anniversary of Summer of Love. The counterculture movement changed rock ‘n’ roll, Haight-Ashbury and more. But despite its name, the phenomenon was not contained to just one season in 1967. Discover – or rediscover – this radical era in Bay Area and American history with The Chronicle.</h2>
-    <img class="desk-img" src="./assets/bg-wide.jpg">
+    <img class="desk-img" src="http://projects.sfchronicle.com/2017/embed-sol-landingpage/images/bg-wide.jpg">
 
     <div id="stories">
 
